🐛 Fix scrolling the page on mobile when touching an OpenLayers map
Why:
- The touch action was stolen by OpenLayers and even though we use a
  custom DragPan interaction that requires dragging with two fingers,
  dragging with one finger does not get propagated to the browser. Thus
  it was not possible to scroll a page which had an OpenLayers map,
  unless you were careful to touch the margins or somewhere else outside
  the map.
- The workaround of forcing `touch-action: auto` on `.ol-viewport` worked.
  https://github.com/openlayers/openlayers/issues/6767#issuecomment-378929233
  https://codepen.io/fredj/pen/vRzqQe/

--- a/web/src/maps/OpenLayersMap.module.css
+++ b/web/src/maps/OpenLayersMap.module.css
@@ -5,6 +5,12 @@
     touch-action: pan-x pan-y;
 }
 
+/* Fix scrolling the page on mobile when touching a map https://github.com/openlayers/openlayers/issues/6767#issuecomment-378929233 */
+
+:global .ol-viewport {
+    touch-action: auto !important;
+}
+
 /* Map Attribution; customize OpenLayers defaults to be printing friendly */
 
 .root :global .map-attribution {
